# local-llm-tuner

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: gemma4_thinking_mode_case_study.md
examples/biomedical_review/: README.md  prompts.py  run_example.py  sample_gold_review.md  sample_manuscript.txt
local_llm_tuner/: __init__.py  cascading.py  core.py  frontier.py  logs.py  ollama_client.py  openai_client.py
local_llm_tuner/search/: __init__.py  base.py  pubmed.py
tests/: test_cascading.py  test_core.py
