[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-llm-tuner"
version = "0.2.0"
description = "Agentic harness for iteratively improving a local LLM's structured-output quality, scored against a frontier-model gold standard."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Zak Kohane"}
]
keywords = ["llm", "ollama", "gemma", "prompt-tuning", "anthropic", "claude", "agentic", "local-llm", "pubmed"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Zero required dependencies — everything in the core library uses urllib.
# All extras are genuinely optional.
dependencies = []

[project.optional-dependencies]
pdf = ["pypdf>=4.0"]
biomedical = ["pypdf>=4.0"]
anthropic = []  # uses urllib; kept for future swap to the official SDK
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.urls]
Repository = "https://github.com/kohaneLab/local-llm-tuner"
Issues = "https://github.com/kohaneLab/local-llm-tuner/issues"

[tool.setuptools]
packages = ["local_llm_tuner", "local_llm_tuner.search"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
